<resources>
    <string name="app_name">calculation</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_message">Calculation Test</string>
    <string name="title_img_info" translatable="false">title image</string>
    <string name="title_button_message">Enter</string>
    <string name="high_score_message">Hign Score:%d</string>

    <string name="button0" translatable="false">0</string>
    <string name="button1" translatable="false">1</string>
    <string name="button2" translatable="false">2</string>
    <string name="button3" translatable="false">3</string>
    <string name="button4" translatable="false">4</string>
    <string name="button5" translatable="false">5</string>
    <string name="button6" translatable="false">6</string>
    <string name="button7" translatable="false">7</string>
    <string name="button8" translatable="false">8</string>
    <string name="button9" translatable="false">9</string>
    <string name="button_clear" translatable="false">C</string>
    <string name="button_submit">OK</string>

    <string name="equal_symbol" translatable="false">=</string>
    <string name="question_mark" translatable="false">\?</string>

    <string name="current_score">Score:%d</string>
    <string name="input_indicator">Your Answer:</string>
    <string name="answer_correct_message">Correct!Go On!</string>
    <string name="answer_indicator_message">Please input your answer!</string>

    <string name="lose_image_message" translatable="false">lose image</string>
    <string name="win_image_message" translatable="false">win image</string>

    <string name="lose_message">You Lose!</string>
    <string name="win_message">You Win!</string>
    <string name="lose_score_message">Your Score:%d</string>
    <string name="win_score_message">New Record:%d</string>
    <string name="button_back_to_title">Back</string>

    <string name="quit_dialog_title">Are you sure to quit ?</string>
    <string name="dialog_positive_message">Ok</string>
    <string name="dialog_negative_message">Cancel</string>
    <string name="title_nav_message">Welcome</string>
    <string name="question_nav_message">Testing</string>
    <string name="win_nav_message">Win</string>
    <string name="lose_nav_message">Lose</string>

</resources>
