<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:label="@string/title_nav_message"
        android:name="com.away0x.calculation.TitleFragment"
        tools:layout="@layout/fragment_title">
        <action
            android:id="@+id/action_titleFragment_to_questionFragment"
            app:destination="@id/questionFragment" />
    </fragment>
    <fragment
        android:id="@+id/questionFragment"
        android:name="com.away0x.calculation.QuestionFragment"
        android:label="@string/question_nav_message"
        tools:layout="@layout/fragment_question">
        <action
            android:id="@+id/action_questionFragment_to_winFragment"
            app:destination="@id/winFragment" />
        <action
            android:id="@+id/action_questionFragment_to_loseFragment"
            app:destination="@id/loseFragment" />
        <action
            android:id="@+id/action_questionFragment_to_titleFragment"
            app:destination="@id/titleFragment" />
    </fragment>
    <fragment
        android:id="@+id/winFragment"
        android:name="com.away0x.calculation.WinFragment"
        android:label="@string/win_nav_message"
        tools:layout="@layout/fragment_win">
        <action
            android:id="@+id/action_winFragment_to_titleFragment"
            app:destination="@id/titleFragment" />
    </fragment>
    <fragment
        android:id="@+id/loseFragment"
        android:name="com.away0x.calculation.LoseFragment"
        android:label="@string/lose_nav_message"
        tools:layout="@layout/fragment_lose">
        <action
            android:id="@+id/action_loseFragment_to_titleFragment"
            app:destination="@id/titleFragment" />
    </fragment>
</navigation>